# simple-aoc-template

./: .gitignore  README.md  pyproject.toml  rerun  template.py
src/aoc/: __init__.py  complex_grid.py  parsing.py
